--- a/treinando_uma_rede_neural_com_pytorch.ipynb
+++ b/treinando_uma_rede_neural_com_pytorch.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/binhojulix/portfolio/blob/master/dados/redes_neurais/trainando_uma_re_neural_com_pytorch/Treinando%20uma%20rede%20Neural%20com%20pytorch.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/devluz2023/treinando_uma_re_neural_com_pytorch/blob/main/treinando_uma_rede_neural_com_pytorch.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -109,7 +109,7 @@
         "    self.softmax = nn.Softmax()\n",
         "\n",
         "  def forward(self, X):\n",
-        "    \n",
+        "\n",
         "    feature = self.relu(self.hidden(X))\n",
         "    output  = self.softmax(self.out(feature))\n",
         "\n",
@@ -304,7 +304,7 @@
         "    self.softmax = nn.Softmax(dim=-1)\n",
         "\n",
         "  def forward(self, X):\n",
-        "    \n",
+        "\n",
         "    feature = self.relu(self.hidden(X))\n",
         "    output  = self.softmax(self.out(feature))\n",
         "\n",
@@ -554,7 +554,7 @@
         "\n",
         "input_size  = data.shape[1]\n",
         "hidden_size = 32\n",
-        "out_size    = len(wine.target_names) # numero de classes \n",
+        "out_size    = len(wine.target_names) # numero de classes\n",
         "\n",
         "net = nn.Sequential(\n",
         "    nn.Linear(input_size, hidden_size),\n",
@@ -572,30 +572,30 @@
       },
       "outputs": [],
       "source": [
-        "import numpy as np \n",
+        "import numpy as np\n",
         "\n",
         "def plot_boundary(X, y, model):\n",
         "  x_min, x_max = X[:, 0].min()-0.1, X[:, 0].max()+0.1\n",
         "  y_min, y_max = X[:, 1].min()-0.1, X[:, 1].max()+0.1\n",
-        "  \n",
+        "\n",
         "  spacing = min(x_max - x_min, y_max - y_min) / 100\n",
-        "  \n",
+        "\n",
         "  XX, YY = np.meshgrid(np.arange(x_min, x_max, spacing),\n",
         "                       np.arange(y_min, y_max, spacing))\n",
-        "  \n",
-        "  data = np.hstack((XX.ravel().reshape(-1,1), \n",
+        "\n",
+        "  data = np.hstack((XX.ravel().reshape(-1,1),\n",
         "                    YY.ravel().reshape(-1,1)))\n",
-        "  \n",
+        "\n",
         "  # For binary problems\n",
         "  # db_prob = model(Variable(torch.Tensor(data)).cuda() )\n",
         "  # clf = np.where(db_prob.cpu().data < 0.5,0,1)\n",
-        "  \n",
+        "\n",
         "  # For multi-class problems\n",
         "  db_prob = model(torch.Tensor(data).to(device) )\n",
         "  clf = np.argmax(db_prob.cpu().data.numpy(), axis=-1)\n",
-        "  \n",
+        "\n",
         "  Z = clf.reshape(XX.shape)\n",
-        "  \n",
+        "\n",
         "  plt.contourf(XX, YY, Z, cmap=plt.cm.brg, alpha=0.5)\n",
         "  plt.scatter(X[:,0], X[:,1], c=y, edgecolors='k', s=25, cmap=plt.cm.brg)"
       ]
@@ -951,7 +951,7 @@
       ],
       "source": [
         "for i in range(200):\n",
-        "  # Forward \n",
+        "  # Forward\n",
         "  pred = net(X)\n",
         "  loss = criterion(pred, Y)\n",
         "\n",
@@ -997,7 +997,7 @@
         "from torch import nn, optim\n",
         "\n",
         "from torchvision import datasets\n",
-        "from torchvision import transforms \n",
+        "from torchvision import transforms\n",
         "\n",
         "from torch.utils.data import DataLoader\n",
         "\n",
@@ -1212,13 +1212,13 @@
         }
       ],
       "source": [
-        "train_set = datasets.MNIST('./', \n",
-        "                           train=True, \n",
+        "train_set = datasets.MNIST('./',\n",
+        "                           train=True,\n",
         "                           transform=transforms.ToTensor(),\n",
         "                           download=True)\n",
         "\n",
-        "test_set = datasets.MNIST('./', \n",
-        "                           train=False, \n",
+        "test_set = datasets.MNIST('./',\n",
+        "                           train=False,\n",
         "                           transform=transforms.ToTensor(),\n",
         "                           download=False)\n",
         "\n",
@@ -1365,15 +1365,15 @@
         }
       ],
       "source": [
-        "crop_set = datasets.MNIST('./', \n",
-        "                           train=False, \n",
+        "crop_set = datasets.MNIST('./',\n",
+        "                           train=False,\n",
         "                           transform=transforms.RandomCrop(12),\n",
         "                           download=False)\n",
         "\n",
         "# Tuple (dado, rótulo)\n",
         "for i in range(3):\n",
         "  dado, rotulo = crop_set[0]\n",
-        "  \n",
+        "\n",
         "  plt.figure()\n",
         "  plt.imshow(dado)\n",
         "  plt.title('Rótulo: '+ str(rotulo))"
@@ -1401,14 +1401,14 @@
       ],
       "source": [
         "\n",
-        "train_loader = DataLoader(train_set, \n",
-        "                          batch_size=args['batch_size'], \n",
-        "                          shuffle=True, \n",
+        "train_loader = DataLoader(train_set,\n",
+        "                          batch_size=args['batch_size'],\n",
+        "                          shuffle=True,\n",
         "                          num_workers=args['num_workers'])\n",
         "\n",
-        "test_loader = DataLoader(test_set, \n",
-        "                          batch_size=args['batch_size'], \n",
-        "                          shuffle=True, \n",
+        "test_loader = DataLoader(test_set,\n",
+        "                          batch_size=args['batch_size'],\n",
+        "                          shuffle=True,\n",
         "                          num_workers=args['num_workers'])"
       ]
     },
@@ -1455,7 +1455,7 @@
       ],
       "source": [
         "for batch in train_loader:\n",
-        "  \n",
+        "\n",
         "  dado, rotulo = batch\n",
         "  print(dado.size(), rotulo.size())\n",
         "\n",
@@ -1487,7 +1487,7 @@
         "    self.softmax = nn.Softmax()\n",
         "\n",
         "  def forward(self, X):\n",
-        "    \n",
+        "\n",
         "    X = X.view(X.size(0), -1)\n",
         "\n",
         "    feature = self.features(X)\n",
@@ -1558,14 +1558,14 @@
         "\n",
         "  epoch_loss = []\n",
         "  for batch in train_loader:\n",
-        "    \n",
+        "\n",
         "    dado, rotulo = batch\n",
         "\n",
         "    # Cast na GPU\n",
         "    dado   = dado.to(args['device'])\n",
         "    rotulo = rotulo.to(args['device'])\n",
         "\n",
-        "    # Forward \n",
+        "    # Forward\n",
         "    pred = net(dado)\n",
         "    loss = criterion(pred, rotulo)\n",
         "    epoch_loss.append(loss.cpu().data)\n",
@@ -2079,20 +2079,20 @@
       "source": [
         "class Bicicletinha(Dataset):\n",
         "  def __init__(self, csv_path, scaler_feat=None, scaler_label=None):\n",
-        "  \n",
+        "\n",
         "    self.dados = pd.read_csv(csv_path).to_numpy()\n",
-        "    \n",
+        "\n",
         "  def __getitem__(self, idx):\n",
-        "    \n",
+        "\n",
         "    sample = self.dados[idx][2:14]\n",
         "    label  = self.dados[idx][-1:]\n",
-        "    \n",
+        "\n",
         "    # converte para tensor\n",
         "    sample = torch.from_numpy(sample.astype(np.float32))\n",
         "    label  = torch.from_numpy(label.astype(np.float32))\n",
-        "    \n",
+        "\n",
         "    return sample, label\n",
-        "    \n",
+        "\n",
         "  def __len__(self):\n",
         "    return len(self.dados)"
       ]
@@ -2217,11 +2217,11 @@
       ],
       "source": [
         "for batch in test_loader:\n",
-        "  \n",
+        "\n",
         "  dado, rotulo = batch\n",
         "  print('## Dimensionalidade do batch ##')\n",
         "  print(dado.size(), rotulo.size())\n",
-        "  \n",
+        "\n",
         "  break"
       ]
     },
@@ -2257,27 +2257,27 @@
       ],
       "source": [
         "class MLP(nn.Module):\n",
-        "  \n",
+        "\n",
         "  def __init__(self, input_size, hidden_size, out_size):\n",
         "    super(MLP, self).__init__()\n",
-        "    \n",
+        "\n",
         "    self.features = nn.Sequential(\n",
         "          nn.Linear(input_size, hidden_size),\n",
         "          nn.ReLU(),\n",
         "          nn.Linear(hidden_size, hidden_size),\n",
         "          nn.ReLU(),\n",
         "    )\n",
-        "    \n",
+        "\n",
         "    self.classifier = nn.Sequential(\n",
         "        nn.Linear(hidden_size, out_size),\n",
         "        nn.ReLU(),\n",
         "    )\n",
         "\n",
         "  def forward(self, X):\n",
-        "    \n",
+        "\n",
         "    hidden = self.features(X)\n",
         "    output = self.classifier(hidden)\n",
-        "    \n",
+        "\n",
         "    return output\n",
         "\n",
         "input_size  = train_set[0][0].size(0)\n",
@@ -2313,33 +2313,33 @@
         "\n",
         "  # Training mode\n",
         "  net.train()\n",
-        "  \n",
+        "\n",
         "  start = time.time()\n",
-        "  \n",
+        "\n",
         "  epoch_loss  = []\n",
         "  for batch in train_loader:\n",
-        "    \n",
+        "\n",
         "    dado, rotulo = batch\n",
-        "    \n",
+        "\n",
         "    # Cast do dado na GPU\n",
         "    dado = dado.to(args['device'])\n",
         "    rotulo = rotulo.to(args['device'])\n",
-        "    \n",
+        "\n",
         "    # Forward\n",
         "    ypred = net(dado)\n",
         "    loss = criterion(ypred, rotulo)\n",
         "    epoch_loss.append(loss.cpu().data)\n",
-        "    \n",
+        "\n",
         "    # Backpropagation\n",
         "    loss.backward()\n",
         "    optimizer.step()\n",
-        "   \n",
+        "\n",
         "  epoch_loss = np.asarray(epoch_loss)\n",
-        "  \n",
+        "\n",
         "  end = time.time()\n",
         "  print('#################### Train ####################')\n",
         "  print('Epoch %d, Loss: %.4f +/- %.4f, Time: %.2f' % (epoch, epoch_loss.mean(), epoch_loss.std(), end-start))\n",
-        "  \n",
+        "\n",
         "  return epoch_loss.mean()"
       ]
     },
@@ -2355,12 +2355,12 @@
         "\n",
         "  # Evaluation mode\n",
         "  net.eval()\n",
-        "  \n",
+        "\n",
         "  start = time.time()\n",
-        "  \n",
+        "\n",
         "  epoch_loss  = []\n",
-        "  \n",
-        "  with torch.no_grad(): \n",
+        "\n",
+        "  with torch.no_grad():\n",
         "    for batch in test_loader:\n",
         "\n",
         "      dado, rotulo = batch\n",
@@ -2375,11 +2375,11 @@
         "      epoch_loss.append(loss.cpu().data)\n",
         "\n",
         "  epoch_loss = np.asarray(epoch_loss)\n",
-        "  \n",
+        "\n",
         "  end = time.time()\n",
         "  print('********** Validate **********')\n",
         "  print('Epoch %d, Loss: %.4f +/- %.4f, Time: %.2f\\n' % (epoch, epoch_loss.mean(), epoch_loss.std(), end-start))\n",
-        "  \n",
+        "\n",
         "  return epoch_loss.mean()"
       ]
     },
@@ -3412,10 +3412,10 @@
       "source": [
         "train_losses, test_losses = [], []\n",
         "for epoch in range(args['epoch_num']):\n",
-        "  \n",
+        "\n",
         "  # Train\n",
         "  train_losses.append(train(train_loader, net, epoch))\n",
-        "  \n",
+        "\n",
         "  # Validate\n",
         "  test_losses.append(validate(test_loader, net, epoch))"
       ]
